# smart-stadium-wc2026

./: .gitignore  DEMO.md  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
brain/: __init__.py  fallbacks.py  prompts.py  schemas.py  stadium_brain.py
data/samples/: README.md  stadium_snapshot.csv  stadium_snapshot.json
simulator/: __init__.py  config.py  data_simulator.py  ingestion.py
tests/: test_accessibility.py  test_app_helpers.py  test_app_smoke.py  test_comprehensive.py  test_data_simulator.py  test_ingestion.py  test_navigation.py  test_schemas.py  test_simulator_stream.py  test_stadium_brain.py  test_state_manager.py
ui/: __init__.py  fan_view.py  map_view.py  ops_view.py  state_manager.py  theme.py
