[project]
name = "smart-stadium-wc2026"
version = "1.0.0"
description = "FIFA World Cup 2026 Smart Stadium — operations command center + multilingual fan assistant"
requires-python = ">=3.11"

[tool.ruff]
# The app targets modern Python; pandas 3.0 already requires >=3.11.
target-version = "py311"
# 120 is a mainstream limit; it keeps user-facing string literals, log messages,
# and CSS/SVG fragments on one readable line rather than fragmenting them.
line-length = 120
extend-exclude = ["colab_push_cell.py", "make_colab_push.py"]

[tool.ruff.lint]
# A broad, pragmatic rule set: pycodestyle/pyflakes, import sorting, bugbear,
# comprehensions, naming, pyupgrade (PEP 585/604 idioms), simplify, and returns.
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RET"]
# N812: the design-system module is aliased `from ui import theme as T` across
# every view — a deliberate, readable convention, not an accidental mis-case.
ignore = ["N812"]
# McCabe complexity guard — surfaces functions worth splitting.
mccabe.max-complexity = 12

[tool.ruff.lint.per-file-ignores]
# app.py must call st.set_page_config() before importing view modules, so its
# imports legitimately sit below the first statement (E402).
"app.py" = ["E402"]
# prompts.py holds LLM system-prompt string literals; wrapping them to 100 cols
# would fragment the prompt text and hurt readability, so line length is exempt.
"brain/prompts.py" = ["E501"]
# fan_view re-exports the fallback under its historical name *after* the constant
# whose comment documents it (E402) — a deliberate placement, not a stray import.
"ui/fan_view.py" = ["E402"]
# Tests favour readability over some lint idioms.
"tests/*" = ["E501", "N802"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
# Disable checks that conflict with deliberate, documented design choices:
# - C0413/wrong-import-position: app.py must call st.set_page_config() first.
# - W0718/broad-except: the upload + auto-refresh paths intentionally catch
#   everything so a bad file or a Streamlit quirk can never crash the app.
# - W0212/protected-access: the app owns its own st.session_state keys.
# - missing docstrings are covered by module/class docstrings already.
# - C0415/import-outside-toplevel: streamlit is lazy-imported in the guarded
#   secrets path, and a few cross-module imports are deferred to avoid cycles.
# - W1203/logging-fstring: f-strings in log calls are intentional for readability;
#   these logs are low-frequency, so lazy % formatting buys nothing here.
# - R0902/too-many-instance-attributes: the simulator legitimately tracks 16
#   pieces of per-venue state.
disable = [
    "C0114", "C0115", "C0116",
    "C0413", "C0415",
    "W0718", "W0212", "W1203",
    "R0913", "R0914", "R0912", "R0915", "R0911", "R0902",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true       # streamlit/pandas/google-genai ship partial stubs
warn_unused_ignores = true
files = ["brain", "simulator", "ui", "app.py"]

[tool.pytest.ini_options]
# Keep the test run output clean so the green result is unambiguous to a reviewer.
# - asyncio_default_fixture_loop_scope pins the pytest-asyncio loop scope, silencing
#   its unset-config deprecation warning (the plugin ships with Streamlit's deps).
# - filterwarnings escalates our own warnings to errors while ignoring known,
#   third-party deprecation noise we do not control.
asyncio_default_fixture_loop_scope = "function"
addopts = "-q"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio.*",
]
